--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,93 @@
 
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+
+
+/* <---------------------------------> */
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial;
+}
+
+h1{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
+    font-weight: bolder;
+}
+
+select{
+    display: block;
+}
+#pokemon-select{
+    display: block;
+    border: none;
+    border-radius: 30px;
+    background-color: aqua;
+    font-weight: bold;
+    color: red;
+}
+
+#pokemon-info{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    font-weight: bold;
+    border: 1px solid black;
+    border-radius: 20px;
+    width: 120px;
+    padding: 20px;
+    background-color: antiquewhite;
+}
+
+
