--- a/css/styles.css
+++ b/css/styles.css
@@ -1,49 +1,132 @@
-
-
-
-
-
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+:root {
+    --colorY: hsl(52, 100%, 50%);
+    --colorB:#3b4cca;
+    --colorRedLight: #FF0000;
+    --colorRedStrong: #CC0000;
+    --colorBack:    #B3A125;
+    --fontLight: 300;
+    --fontNormal: 400;
+    --fontBold: 700;
+}
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
 /* <---------------------------------> */
-
 body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Arial;
+    font-family: "Oswald", sans-serif;
+    background-image: url("https://wallpapers.com/images/hd/pokeball-2560-x-1440-background-vqdyaksc7n3shdnc.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
 }
-
-h1{
-    display: block;
+.container{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 200px;
-    font-weight: bolder;
+    text-align: center;
+    margin-top: 70px;
+    gap: 20px;
 }
-
-select{
-    display: block;
+h1 {
+    font-weight: var(--fontBold);
+    color: var(--colorB);
+    font-size: 50px;
+    padding: 10px;
+}
+.pokemon-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 #pokemon-select{
-    display: block;
+    border-radius: 30px;
+    font-family: "Oswald", sans-serif;
+    background-color: var(--colorY);
+    font-weight: var(--fontNormal);
+    color: var(--colorRedStrong);
+    margin: 10px;
+    padding: 5px;
+}
+#get-pokemon {
+    background-color: var(--colorBack);
     border: none;
     border-radius: 30px;
-    background-color: aqua;
-    font-weight: bold;
-    color: red;
+    font-family: "Oswald", sans-serif;
+    margin: 10px;
+    padding: 5px;
 }
-
-#pokemon-info{
-    display: block;
-    justify-content: center;
+#pokemon-info {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    margin-top: 20px;
-    font-weight: bold;
-    border: 1px solid black;
+    justify-content: center;
+    font-weight: var(--fontBold);
+    line-height: 1.5;
+    background-color: var(--colorY);
+    border: 2px solid var(--colorBack);
     border-radius: 20px;
-    width: 120px;
     padding: 20px;
-    background-color: antiquewhite;
+    margin-top: 20px;
+    width: 200px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
 }
-
-
+.pokInfo img{
+    width: 140px;
+    height: auto;
+}
+.pokInfo h3 {
+    font-size: 25px;
+    color: var(--colorRedStrong);
+}
+.pokInfo p {
+    color: var(--colorB);
+}
